# SpMV-using-dgcmatrix-faer-bridge

./: README.md
Rscripts/: Benchmarks.R  basic-example.R
SPMV/: .Rbuildignore  DESCRIPTION  NAMESPACE
SPMV/R/: extendr-wrappers.R
SPMV/src/: Makevars  Makevars.in  Makevars.win.in  entrypoint.c
SPMV/src/rust/: Cargo.toml
SPMV/src/rust/src/: lib.rs
