[package]
name = 'SPMV'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'SPMV'

[dependencies]
extendr-api = '0.8.1'
dgcmatrix-faer-bridge = { git = "https://github.com/shinigami-777/dgcmatrix-faer-bridge" }
faer = "0.19"

[profile.release]
lto = true
codegen-units = 1
